feat: fundamenta arquitetura e operacao do ERP